--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.ExpensesTracker"
         tools:targetApi="31">
         <activity
+            android:name=".HomePage"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".OpeningScreen"
             android:exported="true">
             <intent-filter>
@@ -25,9 +34,8 @@
             android:name=".SignUp"
             android:exported="true" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-        </activity>
+            android:name=".LoginActivity"
+            android:exported="true"></activity>
     </application>
 
 </manifest>
